alterado header (border radius 20px)

--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,7 @@ header{
     justify-content: center;
     align-items: center;
     background-color: #87CEEB;
+    border-radius: 20px;
 
     /*
     2. Azul Claro
